--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aritech-client",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "JavaScript client for communicating with Aritech ATS alarm panels (ATS1500AIP tested). Supports programmatic usage and CLI.",
   "main": "index.js",
   "type": "module",
@@ -8,7 +8,7 @@
     ".": "./index.js"
   },
   "bin": {
-    "aritech": "./aritech-cli.js"
+    "aritech": "aritech-cli.js"
   },
   "files": [
     "index.js",
